# windows-remote

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
.gitub/workflows/: main.yml
src/: function.html  main.rs  menu.html  methods.rs
