[package]
name = "nuc_remote"
version = "1.1.0"
edition = "2021"
description = "Program for remotely controlling computers"
authors = ["Ray Britton <raybritton@pm.me>"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
actix-web = "4.1.0"
lazy_static = "1.4.0"
ureq = "2.4.0"
uuid = {version="1.1.2", features=["v4", "fast-rng"]}
chrono = "0.4.19"

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
